[SRM-68] Remove duplicate/error-prone method for adding multiple owners to cache